--- a/css/style.css
+++ b/css/style.css
@@ -5,23 +5,27 @@
 }
 
 body {
-  background-color: lightskyblue;
+  background-color: #84EFA2 ;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .main {
-  width: 80vw;
-  margin: auto;
-  display: flex;
-  justify-content: center;
+  position: absolute;
+  width: 500px;
+  height: 60%;
+  left: 410px;
+  top: 110px;
+  background: rgba(255, 255, 255, 0.76);
 }
 
 .titulo {
-  color: black;
-  font-style: italic;
+  font-family: Ubuntu Condensed;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 23px;
+  line-height: 25px;
   padding: 15px;
   width: 30vw;
-  margin: auto;
 
 }
 
@@ -32,7 +36,7 @@ body {
   background-color: white;
   border-radius: 0.5em;
   width: 30vw;
-  height: auto;
+  height: 700;
 }
 
 .btn {
@@ -53,11 +57,90 @@ body {
   width: 100%;
   height: 50px;
 }
+.invisivel{
+  display:  none;
+  color:  red;
+}
 #msg-erro {
   color: red;
-  margin: 5px
+  margin: 2px;
 }
-.invisivel {
-  display : none ;
-  
+
+.titulo-esp {
+  position: absolute;
+  width: 467px;
+  height: 92px;
+  left: 445px;
+  top: 5px;
+  font-family: Zilla Slab Highlight;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 72px;
+  line-height: 86px;
+
+  color: #000000;
+}
+#btn-cripto {
+  position: absolute;
+  width: 131px;
+  height: 56px;
+  left: 2px;
+  top: 85px;
+  background: #24BE99;
+  box-shadow: inset 4px -4px 5px 4px rgba(0, 0, 0, 0.25);
+  font-family: Ubuntu Condensed;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 17px;
+  outline-width: 55px;
+}
+#btn-descripto {
+  position: absolute;
+  width: 131px;
+  height: 56px;
+  left: 170px;
+  top: 85px;
+  background: #24BE99;
+  box-shadow: inset 4px -4px 5px 4px rgba(0, 0, 0, 0.25);
+  font-family: Ubuntu Condensed;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 17px;
+  outline-width: 55px;
+}
+#btn-copy {
+  position: absolute;
+  width: 131px;
+  height: 56px;
+  left: 2px;
+  top: 87px;
+  background: #24BE99;
+  box-shadow: inset 4px -4px 5px 4px rgba(0, 0, 0, 0.25);
+  font-family: Ubuntu Condensed;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 17px;
+  outline-width: 55px;
+}
+.msg-box {
+  position: absolute;
+  padding: 10px;
+  margin: 0 20px 0 20px;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  background-color: white;
+  border-radius: 0.5em;
+  width: 30vw;
+  height: auto;
+  top: 220px
+}
+.form-box {
+  position: absolute;
+  padding: 10px;
+  margin: 0 20px 0 20px;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  background-color: white;
+  border-radius: 0.5em;
+  width: 30vw;
+  height: auto;
+  top: 30px
 }
